Update clientloader (and tell only developers to turn on assertions)
Make both `--localinjected` and `--rs=CUSTOM` work

Make `--rs=VANILLA` work again